# docker-image-python

./: .gitignore  Dockerfile  MANIFEST.in  docker-compose.yaml  pyproject.toml  setup.py
docker_images.egg-info/: PKG-INFO  SOURCES.txt
image_python/: Dockerfile
python/: Dockerfile
