[tool.poetry]
name = "Docker Images"
version = "0.1.0"
description = ""
authors = ["Vicente Pinheiro <vpp.filho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^60.10.0"
build = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
packages=['python']