[tool.poetry]
name = "image_python"
version = "0.1.0"
description = ""
authors = ["Vicente <vpp.filho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

